# fin-pocket

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
fin_pocket/: __init__.py  __main__.py  chart.py  cli.py
fin_pocket/data/: __init__.py  provider.py
fin_pocket/signals/: __init__.py  atr.py  base.py  bollinger_bands.py  double_top_bottom.py  fibonacci.py  ma_crossover.py  macd.py  moving_averages.py  obv.py  pennant.py  rsi.py  rsi_divergence.py  support_resistance.py  volume_breakout.py  wedge.py
tests/: conftest.py  test_atr.py  test_bollinger_bands.py  test_chart.py  test_cli.py  test_coverage_gaps.py  test_double_top_bottom.py  test_edge_cases.py  test_fibonacci.py  test_ma_crossover.py  test_macd.py  test_main_entry.py  test_moving_averages.py  test_obv.py  test_pennant.py  test_provider.py  test_rsi.py  test_rsi_divergence.py  test_signal_plots.py  test_support_resistance.py  test_volume_breakout.py  test_wedge.py
