[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-pocket"
version = "0.1.0"
description = "Technical analysis signal visualization tool for stocks"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12"
keywords = ["finance", "stocks", "technical-analysis", "charting", "signals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/canyoupleasecreateanaccount/fin-pocket"
Repository = "https://github.com/canyoupleasecreateanaccount/fin-pocket"
Issues = "https://github.com/canyoupleasecreateanaccount/fin-pocket/issues"

[project.scripts]
fin-pocket = "fin_pocket.cli:_cli_entry"

[tool.setuptools.packages.find]
include = ["fin_pocket*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
