[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-pocket"
dynamic = ["version"]
description = "Technical analysis signal visualization tool for stocks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["finance", "stocks", "technical-analysis", "charting", "signals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/canyoupleasecreateanaccount/fin-pocket"
Repository = "https://github.com/canyoupleasecreateanaccount/fin-pocket"
Issues = "https://github.com/canyoupleasecreateanaccount/fin-pocket/issues"

[project.scripts]
fin-pocket = "fin_pocket.cli:_cli_entry"

[tool.setuptools.packages.find]
include = ["fin_pocket*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
